# HyperCTui

./: .gitignore  .grype.yaml  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  README.md  codecov.yml  environment.yml  pyproject.toml  setup.cfg  setup.py  testing_environment.yml
.github/workflows/: package.yml  unittest.yml  update-lockfiles.yml
conda.recipe/: meta.yaml
scripts/: asui  hyperctui
src/ai_svmbir_ui/ui/: main_application.ui
src/asui/: __init__.py  __main__.py  asui.py  config.json  event_handler.py  monitor.py
src/asui/initialization/: gui_initialization.py
src/asui/monitor/: __init__.py  event_handler.py  get.py  initialization.py  monitor.py
src/asui/pre_processing_monitor/: __init__.py  event_handler.py  get.py  initialization.py  monitor.py
src/asui/preview_file/: preview_file_launcher.py
src/asui/session/: __init__.py  load_previous_session_launcher.py  new_session.py  session_handler.py
src/asui/setup_ob/: event_handler.py  get.py
src/asui/setup_projections/: event_handler.py  get.py
src/asui/step1/: event_handler.py  get.py
src/asui/ui/: main_application.ui  monitor.ui  new_session.ui  preview_file.ui
src/asui/utilities/: config_handler.py  file_utilities.py  folder_path.py  get.py  table.py  widgets.py
src/hyperctui/: __init__.py  __main__.py  commands_launcher.py  config.json  event_handler.py  hyperctui.py
src/hyperctui/autonomous_reconstruction/: __init__.py  event_handler.py  get.py  help_automatic_angles.py  help_golden_angle.py  initialization.py  select_evaluation_regions.py  select_tof_regions.py
src/hyperctui/crop/: crop.py
src/hyperctui/initialization/: gui_initialization.py
src/hyperctui/log/: log_launcher.py
src/hyperctui/pre_autonomous_monitor/: __init__.py  event_handler.py  get.py  initialization.py  monitor.py
src/hyperctui/pre_processing_monitor/: __init__.py  event_handler.py  get.py  initialization.py  monitor.py
src/hyperctui/preview_file/: preview_file_launcher.py
src/hyperctui/rotation_center/: event_handler.py  rotation_center.py
src/hyperctui/session/: __init__.py  load_previous_session_launcher.py  new_session.py  session_handler.py
src/hyperctui/setup_ob/: event_handler.py  get.py
src/hyperctui/setup_projections/: event_handler.py  get.py
src/hyperctui/static/: golden_angle.csv
src/hyperctui/ui/: help_automatic_angle.ui  main_application.ui  new_session.ui  pre_processing_monitor.ui  select_evaluation_regions.ui  select_tof_regions.ui  select_tof_regions_1.ui
src/hyperctui/utilities/: array.py  check.py  config_handler.py  exceptions.py  file_utilities.py  folder_path.py  get.py  status_message_config.py  table.py  time.py  widgets.py
tests/: conftest.py
tests/unit/hyperctui/: template_test.py  test_commands_launcher.py  test_event_handler.py  test_hyperctui.py  test_parent.py
tests/unit/hyperctui/autonomous_reconstruction/: test_ar_event_handler.py  test_ar_get.py  test_ar_initialization.py  test_ar_select_evaluation_regions.py  test_help_golden_angle.py  test_select_tof_regions.py
tests/unit/hyperctui/crop/: test_crop.py  test_load_projections.py
tests/unit/hyperctui/initialization/: test_gui_initialization.py
tests/unit/hyperctui/log/: test_log_launcher.py
tests/unit/hyperctui/pre_autonomous_monitor/: test_event_handler.py  test_monitor.py  test_pam_get.py  test_pam_initialization.py
tests/unit/hyperctui/pre_processing_monitor/: test_get.py  test_monitor.py  test_ppm_event_handler.py  test_ppm_get.py  test_ppm_initialization.py
tests/unit/hyperctui/preview_file/: test_preview_file_launcher.py
tests/unit/hyperctui/rotation_center/: test_event_handler.py  test_rc_event_handler.py  test_rotation_center.py
tests/unit/hyperctui/session/: test_load_previous_session_launcher.py  test_new_session.py  test_session_handler.py
tests/unit/hyperctui/setup_ob/: test_event_handler.py  test_ob_classification.py  test_so_get.py
tests/unit/hyperctui/setup_projections/: test_setup_projections_get.py  test_sp_event_handler.py
tests/unit/hyperctui/utilities/: test_array.py  test_check.py  test_config_handler.py  test_exceptions.py  test_file_utilities.py  test_folder_path.py  test_parent.py  test_status_message_config.py  test_table.py  test_table_handler.py  test_time.py  test_utils_get.py  test_widgets.py  test_widgets_tabs_guard.py
