[project]
name = "hyperctui"
description = "HyperCTui User Interface to run svmbir code with AI"
readme = "README.md"
authors = [
    {name = "Jean Bilheux", email = "bilheuxjm@ornl.gov"},
    {name = "Venkatrishnan (Venkat) Singanallur", email = "venkatakrisv@ornl.gov"},
    {name = "Shimin Tang", email = "tangs@ornl.gov"},
    {name = "Chen Zhang", email = "zhangc@ornl.gov"},
]
maintainers = [
    { name = "Jean Bilheux", email = "bilheuxjm@ornl.gov"},
    { name = "Chen Zhang", email="zhangc@ornl.gov"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research"
]
dynamic = ["version"]
# SPEC 0 (scientific-python support window); org policy decided 2026-06-10
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["HyperCTui", "svmbir", "AI", "neutron"]
dependencies = [
    # Core
    "numpy",
    "pandas",
    "pillow",
    "tifffile",
    "inflect",
    "astropy",
    # "tomopy",  # not available on PyPI; conda-only (lazy-imported with an
    #             actionable error in rotation_center.event_handler)
    # GUI
    "QtPy",
    "PyQt5",
    "pyqtgraph",
    # Utils
    "loguru",
    # neutron
    # (NeuNorm removed in the #175 port: crop.py loads FITS directly via astropy)
    "neutronbraggedge",
]

[conda-pypi-map]
"conda-forge" = """
{
  "pyqt": "PyQt5",
}
"""

[project.urls]
homepage = "https://github.com/ornlneutronimaging/HyperCTui"
repository = "https://github.com/ornlneutronimaging/HyperCTui"
# documentation = "https://ornlneutronimaging.github.io/HyperCTui/"  # Not yet available
issues = "https://github.com/ornlneutronimaging/HyperCTui/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov", "pre-commit", "ruff"]
docs = ["sphinx>=8.2.1", "sphinx_rtd_theme>=3.0.1"]
jupyter = ["jupyterlab", "ipympl", "ipywidgets"]
all = ["hyperctui[dev,docs,jupyter]"]

[project.scripts]
hyperctui = "hyperctui.__main__:main"


# -------------------------------- #
# -- Build system configuration -- #
# -------------------------------- #
[build-system]
requires = [
  "setuptools>= 42",
  "wheel",
  "toml",
  "versioningit"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "scripts*", "docs*", "notebooks*"]

[tool.setuptools.package-data]
# "*.json" is load-bearing: config.json is read unguarded at startup,
# and wheels/conda artifacts built without it crash on first run
"*" = ["*.yml", "*.yaml", "*.ini", "*.json"]
"hyperctui.ui" = ["*.ui"]
"hyperctui.static" = ["*.png", "*.csv"]


# -------------------------------- #
# -- VersioningIt configuration -- #
# -------------------------------- #
[tool.versioningit.vcs]
method = "git"
default-tag = "0.1.0"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"

[tool.versioningit.write]
file = "src/hyperctui/_version.py"


# -------------------------------- #
# ----- PyTest configuration ----- #
# -------------------------------- #
[tool.pytest.ini_options]
addopts = "-v --cov=hyperctui --cov-report=term-missing --cov-branch --cov-report=xml"
pythonpath = [
    ".", "src"
]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]
markers = []


# -------------------------------- #
# ------ Ruff configuration ------ #
# -------------------------------- #
[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["notebooks/**", "**/*.ipynb"]

[tool.ruff.lint]
select = ["A", "ARG","ASYNC","BLE","C90", "E", "F", "I", "UP032", "W"]
ignore = [
    # NOTE: The following lint errors are ignored, but we should fix them eventually
    "ARG002",  # Unused method argument
    "ARG005",  # Unused lambda argument
    "C901",  # Complexity too high
    "E741",  # ambiguous variable name, such as L, E, etc.
    "F811",  # Redefinition of unused variable (default var from Qt trigger this)
    "F841",  # Local variable is assigned to but never used
]

[tool.ruff.lint.isort]
known-first-party = ["hyperctui"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


# -------------------------------- #
# ------ Mypy configuration ------ #
# -------------------------------- #
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false


# -------------------------------- #
# ------ Pixi configuration ------ #
# -------------------------------- #
[tool.pixi.workspace]
channels = ["conda-forge", "neutronimaging"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
hyperctui = { path = ".", editable = true }

[tool.pixi.dependencies]
tomopy = ">=1.14.4,<2"
astropy = ">=7.0.1,<8"
inflect = ">=7.5.0,<8"
qt = ">=5.15.8,<6"
qtpy = ">=2.4.3,<3"
pyqt = ">=5.15.9,<6"
pyqtgraph = ">=0.13.7,<0.14"
pandas = ">=2.2.3,<3"
pillow = ">=12.2.0,<13"   # CVE-2026-25990, CVE-2026-40192 fixed in 12.2
numpy = "*"
tifffile = "*"
openssl = ">=3.6.3"   # CVE-2026-34182 (critical) + 8 high fixed in 3.6.3
h11 = ">=0.16"        # GHSA-vqfr-h8mv-ghfj (critical, request smuggling) fixed in 0.16
bleach = ">=6.4.0"    # GHSA-gj48-438w-jh9v (formaction XSS) fixed in 6.4.0 (transitive via nbconvert)
msgpack-python = ">=1.2.1"   # GHSA-6v7p-g79w-8964 fixed in 1.2.1 (transitive)
loguru = ">=0.7.2,<0.8"

[tool.pixi.tasks]
# PyPi packaging tasks
build-pypi = { cmd = "python -m build", description = "Build the package for PyPI" }
publish-pypi = { cmd = "twine upload dist/*", description = "Publish the package to PyPI", depends-on = ["build-pypi"] }
clean-pypi = { cmd = "rm -rf dist", description = "Clean the PyPI build artifacts" }
# Conda packaging tasks
# NOTE: for build-conda to work locally, you need to set pixi to use detached-environments, i.e. pixi config set detached-environments true
#       this is because the conda build will complain about build environment in source and refuse to build.
build-conda = { cmd = "cd conda.recipe && VERSION=$(versioningit ../) conda mambabuild --channel conda-forge --output-folder . .", description = "Build the package for conda" }
# (conda-verify removed: the tool is archived with no modern-Python builds;
# CI verifies via neutrons/conda-actions pkg-install + pkg-verify instead)
publish-conda = { cmd = "anaconda upload --user neutronimaging conda.recipe/noarch/*.tar.bz2", description = "Publish to neutronimaging channel", depends-on = ["build-conda"] }
clean-conda = { cmd = "sh -c \"find conda.recipe/* ! -name 'meta.yaml' -exec rm -rf {} +\"", description = "Clean the conda build artifacts" }
# Testing tasks
test = { cmd = "pytest", description = "Run the tests" }  # pytest config above takes care of the arguments
# Clean all
clean-all = { description = "Clean all build artifacts", depends-on = ["clean-pypi", "clean-conda"] }

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
pytest-repeat = "*"
pytest-qt = ">=4.4.0,<5"

[tool.pixi.feature.package]
# packaging happens on Linux CI; the archived conda-verify has no
# modern-Python build for osx-arm64, making the env unsolvable there
platforms = ["linux-64"]

[tool.pixi.feature.package.dependencies]
versioningit = "*"
boa = "*"
anaconda-client = ">=1.12.3,<2"  # For manual upload to anaconda
conda-build = "*"
python-build = "*"
twine = ">=6.1.0,<7"

[tool.pixi.feature.developer.dependencies]
pip = "*"
versioningit = "*"
pre-commit = "*"
conda-tree = "*"
ruff = "*"

[tool.pixi.feature.jupyter.dependencies]
jupyterlab = "*"
ipympl = "*"
ipywidgets = "*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.environments]
# package isolated in its own solve-group: boa's conda-build<24.7 /
# libmambapy<1.6 caps held the WHOLE default env (tests included) at
# Python 3.11; packaging tasks run via `pixi run -e package ...`
default = { features = ["test", "developer"], solve-group = "default" }
package = { features = ["package"], solve-group = "package" }
jupyter = { features = ["developer", "jupyter"], solve-group = "jupyter" }
# per-version test environments (SPEC 0 window) for the CI matrix
py312 = { features = ["test", "py312"], solve-group = "py312" }
py313 = { features = ["test", "py313"], solve-group = "py313" }
py314 = { features = ["test", "py314"], solve-group = "py314" }
